--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src='js/graph3D/entities/Edge.js'></script>
     <script src='js/graph3D/entities/Polygon.js'></script>
     <script src='js/graph3D/entities/Subject.js'></script>
+    <script src='js/graph3D/entities/Light.js'></script>
 
     <script src='js/graph3D/Surfaces/Surfaces.js'></script>
     <script src='js/graph3D/Surfaces/cube.js'></script>
@@ -14,15 +15,23 @@
     <script src="js/graph3D/Surfaces/sfera.js"></script>
     <script src="js/graph3D/Surfaces/ellipsoid.js"></script>
     <script src='js/graph3D/Surfaces/parabaloid.js'></script>
+    <script src='js/graph3D/Surfaces/cylinder.js'></script>
+    <script src='js/graph3D/Surfaces/cone.js'></script>
+    <script src='js/graph3D/Surfaces/parCylinder.js'></script>
+    <script src='js/graph3D/Surfaces/hyperCylinder.js'></script>
     
+    
+    <script src='js/ui/UI.js'></script>
     <script src='js/graph3D/Math3D.js'></script>
     <script src='js/graph3D/Graph3D.js'></script>
     <script src='js/graph/Canvas.js'></script>
     <script src='js/main.js'></script>
 </head>
 <body>
-    <input type="checkbox" id="pointCheck" value="a1" checked>Точки<Br>
-    <input type="checkbox" id="edgesCheck" value="a1" checked>Ребра<Br>
-    <input type="checkbox" id="polygonCheck" value="a1" checked>Полигоны<Br>
+    <div>
+        <input type="checkbox" id="pointCheck" value="a1" checked>Точки<Br>
+        <input type="checkbox" id="edgesCheck" value="a1" checked>Ребра<Br>
+        <input type="checkbox" id="polygonCheck" value="a1" checked>Полигоны<Br>
+    </div>
 </body>
 </html>
