--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <div>
-        <input type="checkbox" id="pointCheck" value="a1" checked>Точки<Br>
-        <input type="checkbox" id="edgesCheck" value="a1" checked>Ребра<Br>
+        <input type="checkbox" id="pointCheck">Точки<Br>
+        <input type="checkbox" id="edgesCheck">Ребра<Br>
         <input type="checkbox" id="polygonCheck" value="a1" checked>Полигоны<Br>
     </div>
 </body>
